@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2004-05-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> utilities/Makefile.am (check): Add convert -list tests.
+
+</UL>
+<p>
 2004-05-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
