@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2004-05-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Magick++/STL.h (coderInfoList): Make error reporting a bit
+        more lenient so that if an error occurs while loading a module it
+        is not reported as an exception unless no coders were found at
+        all.
+
+</UL>
+<p>
 2004-05-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
