@@ -1,3 +1,10 @@
+2004-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Magick++/STL.h (coderInfoList): Make error reporting a bit
+	more lenient so that if an error occurs while loading a module it
+	is not reported as an exception unless no coders were found at
+	all.
+
 2004-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (clipMask): Use GetImageClipMask.
