@@ -1,3 +1,7 @@
+2004-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* utilities/Makefile.am (check): Add convert -list tests.
+
 2004-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Magick++ needs to be built as a static library
